traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: foo.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /bar
        pathType: Prefix
status:
  loadBalancer: {}
